--- a/index.html
+++ b/index.html
@@ -7,6 +7,70 @@
     <title>Document</title>
   </head>
   <body>
-    <h1 class="text-3xl font-bold underline">Hello world!</h1>
+    <footer>
+      <section
+        class="flex flex-col md:flex-row items-center md:justify-center gap-4 p-10 text-white bg-[#0C2340]"
+      >
+        <a href="#">Bookstore</a>
+        <a href="#">Employment</a>
+        <a href="#">Tour</a>
+        <a href="#">InsideND</a>
+        <a href="#">Academic Calendar</a>
+      </section>
+
+      <section class="grid md:grid-cols-4">
+        <!-- <svg>
+          <use
+            xmlns:xlink="https://www.w3.org/1999/xlink"
+            xlink:href="#icon-mark"
+          ></use>
+        </svg> -->
+        <img src="" alt="" />
+
+        <div
+          class="col-span-2 flex flex-col items-center justify-center md:grid md:grid-cols-3 md:grid-rows-2 gap-2"
+        >
+          <a
+            href="#"
+            class="flex gap-2 p-4 hover:bg-[#E1E8F2] duration-300 rounded-2xl"
+          >
+            <img src="images/facebook-box-fill.svg" alt="" width="25" />
+            <p class="text-xl">Facebook</p>
+          </a>
+          <a
+            href="#"
+            class="flex gap-2 p-4 hover:bg-[#E1E8F2] duration-300 rounded-2xl"
+          >
+            <img src="images/twitter-x-line.svg" alt="" width="25" />
+            <p class="text-xl">X/Twitter</p>
+          </a>
+          <a
+            href="#"
+            class="flex gap-2 p-4 hover:bg-[#E1E8F2] duration-300 rounded-2xl"
+          >
+            <img src="images/instagram-line.svg" alt="" width="25" />
+            <p class="text-xl">Instagram</p>
+          </a>
+          <a
+            href="#"
+            class="flex gap-2 p-4 hover:bg-[#E1E8F2] duration-300 rounded-2xl"
+          >
+            <img src="images/youtube-fill.svg" alt="" width="25" />
+            <p class="text-xl">YouTube</p>
+          </a>
+          <a
+            href="#"
+            class="flex gap-2 p-4 hover:bg-[#E1E8F2] duration-300 rounded-2xl"
+          >
+            <img src="images/linkedin-fill.svg" alt="" width="25" />
+            <p class="text-xl">LinkedIn</p>
+          </a>
+        </div>
+        <div class="text-[#555555]">
+          <a href="#">&copy; 2025 University of Notre Dame</a>
+          <p>Notre Dame, IN 46556 USA</p>
+        </div>
+      </section>
+    </footer>
   </body>
 </html>
