2nd commit: footer almost done

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="#">Academic Calendar</a>
       </section>
 
-      <section class="grid md:grid-cols-4">
+      <section class="grid md:grid-cols-4 p-5">
         <!-- <svg>
           <use
             xmlns:xlink="https://www.w3.org/1999/xlink"
@@ -32,14 +32,14 @@
         >
           <a
             href="#"
-            class="flex gap-2 p-4 hover:bg-[#E1E8F2] duration-300 rounded-2xl"
+            class="flex gap-2 p-4 hover:bg-[#E1E8F2] duration-300 rounded-xl"
           >
             <img src="images/facebook-box-fill.svg" alt="" width="25" />
             <p class="text-xl">Facebook</p>
           </a>
           <a
             href="#"
-            class="flex gap-2 p-4 hover:bg-[#E1E8F2] duration-300 rounded-2xl"
+            class="flex gap-2 p-4 hover:bg-[#E1E8F2] duration-300 rounded-xl"
           >
             <img src="images/twitter-x-line.svg" alt="" width="25" />
             <p class="text-xl">X/Twitter</p>
@@ -66,11 +66,73 @@
             <p class="text-xl">LinkedIn</p>
           </a>
         </div>
-        <div class="text-[#555555]">
-          <a href="#">&copy; 2025 University of Notre Dame</a>
+
+        <div class="text-[#555555] flex flex-col gap-0.5 items-center">
+          <a href="#" class="font-bold">&copy; 2025 University of Notre Dame</a>
           <p>Notre Dame, IN 46556 USA</p>
+          <p>Phone: <a href="#" class="underline">(574) 631-5000</a></p>
+          <a href="#" class="underline">Contact</a>
         </div>
       </section>
+
+      <div
+        class="bg-[#D2D2D2] grid md:grid-cols-2 p-10 text-[#555555] md:px-20"
+      >
+        <div class="flex flex-col md:flex-row gap-5">
+          <a
+            href="#"
+            class="px-4 py-2 hover:bg-[#F0F0F0] duration-300 rounded-xl"
+            >Search
+          </a>
+
+          <a
+            href="#"
+            class="px-4 py-2 hover:bg-[#F0F0F0] duration-300 rounded-xl"
+            >Mobile App
+          </a>
+
+          <a
+            href="#"
+            class="px-4 py-2 hover:bg-[#F0F0F0] duration-300 rounded-xl"
+            >News
+          </a>
+
+          <a
+            href="#"
+            class="px-4 py-2 hover:bg-[#F0F0F0] duration-300 rounded-xl"
+            >Events
+          </a>
+
+          <a
+            href="#"
+            class="px-4 py-2 hover:bg-[#F0F0F0] duration-300 rounded-xl"
+            >Visit
+          </a>
+        </div>
+
+        <div class="flex flex-col md:grid md:grid-rows-2 md:grid-cols-3 gap-5">
+          <a
+            href="#"
+            class="px-4 py-2 hover:bg-[#F0F0F0] duration-300 rounded-xl"
+            >Accessibility
+          </a>
+          <a
+            href="#"
+            class="px-4 py-2 hover:bg-[#F0F0F0] duration-300 rounded-xl"
+            >Emergency
+          </a>
+          <a
+            href="#"
+            class="px-4 py-2 hover:bg-[#F0F0F0] duration-300 rounded-xl"
+            >Closed Captioning
+          </a>
+          <a
+            href="#"
+            class="px-4 py-2 hover:bg-[#F0F0F0] duration-300 rounded-xl md:col-start-2 md:col-span-2 md:text-end"
+            >Notice of Non-Discrimination
+          </a>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
