--- a/index.html
+++ b/index.html
@@ -7,7 +7,29 @@
     <title>Document</title>
   </head>
   <body>
-    <footer>
+    <main>
+      <div class="grid md:grid-cols-5">
+        <div class="md:col-span-2 overflow-hidden">
+          <img src="images/dowd-students-800.jpeg" alt="" class="" />
+        </div>
+        <div
+          class="place-self-center md:h-[90%] md:col-start-1 md:row-start-1 md:col-span-3 grid gap-4 p-5 md:px-28 md:py-20 bg-[#0C2340] text-white"
+        >
+          <p class="text-xl md:text-3xl/12 font-[sumana]">
+            “Notre Dame must be the leading global Catholic research university,
+            on par with but distinct from the world's best private universities.
+            This effort to educate students and conduct research at the highest
+            level animated by a distinctive Catholic mission is one of the most
+            exciting and consequential experiments in global higher education.”
+          </p>
+          <p class="place-self-end font-['Libre Franklin'] md:text-xl">
+            — Notre Dame 2033: A Strategic Framework
+          </p>
+        </div>
+      </div>
+    </main>
+
+    <footer class="py-10">
       <section
         class="flex flex-col md:flex-row items-center md:justify-center gap-4 p-10 text-white bg-[#0C2340]"
       >
@@ -75,9 +97,7 @@
         </div>
       </section>
 
-      <div
-        class="bg-[#D2D2D2] grid md:grid-cols-2 p-10 text-[#555555] md:px-20"
-      >
+      <div class="bg-[#D2D2D2] grid md:grid-cols-2 p-5 text-[#555555] md:px-20">
         <div class="flex flex-col md:flex-row gap-5">
           <a
             href="#"
