--- a/index.html
+++ b/index.html
@@ -7,13 +7,154 @@
     <title>Document</title>
   </head>
   <body>
-    <main>
-      <div class="grid md:grid-cols-5">
-        <div class="md:col-span-2 overflow-hidden">
+    <main class="grid">
+      <!-----------------------------------------------UNIVERSITY NEWS----------------------------------------------------------- -->
+      <section class="w-[90vw] place-self-center my-5 md:my-20">
+        <p class="mb-2 font-['Libre Franklin'] text-lg text-[#575757]">
+          UNIVERSITY NEWS
+        </p>
+
+        <div class="grid mb-2">
+          <p class="text-[#0C2340] font-[GPC] text-3xl lg:text-5xl">
+            <strong>Notre Dame At Work</strong>
+          </p>
+
+          <a
+            href="#"
+            class="flex hover:bg-[#E1E8F2] p-2 rounded-xl duration-300 md:place-self-end font-['Libre Franklin'] text-[#0C2340]"
+          >
+            <p class="md:text-lg self-center">View all stories</p>
+            <img
+              src="images/arrow-right-s-line.svg"
+              alt=""
+              width="20"
+              class="self-center"
+          /></a>
+        </div>
+
+        <div class="font-[Sumana]">
+          <div><img src="images/globering_2025.jpeg" alt="" /></div>
+          <div>
+            <p>INTERNATIONAL</p>
+            <p>
+              University of Notre Dame wins award for excellence in campus
+              internationalization
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <!-----------------------------------------------UNIVERSITY STORIES----------------------------------------------------------- -->
+      <section class="w-[90vw] place-self-center my-5 md:my-20">
+        <p class="mb-2 font-['Libre Franklin'] text-lg text-[#575757]">
+          UNIVERSITY STORIES
+        </p>
+        <div class="grid mb-2">
+          <p class="text-[#0C2340] font-[GPC] text-3xl lg:text-5xl">
+            <strong>Notre Dame In Focus</strong>
+          </p>
+
+          <a
+            href="#"
+            class="flex hover:bg-[#E1E8F2] p-2 rounded-xl duration-300 place-self-end font-['Libre Franklin'] text-[#0C2340]"
+          >
+            <p class="md:text-lg self-center">View all stories</p>
+            <img
+              src="images/arrow-right-s-line.svg"
+              alt=""
+              width="20"
+              class="self-center"
+          /></a>
+        </div>
+
+        <div class="grid lg:grid-cols-3 gap-10">
+          <div
+            class="grid md:grid-rows-3 hover:bg-[#E1E8F2] duration-300 hover:border-b-4 hover:border-[#C1CDDD]"
+          >
+            <div class="row-span-2">
+              <img src="images/2025-sampoorna-800.webp" alt="" />
+            </div>
+            <div class="flex items-center">
+              <div class="flex flex-col gap-5 p-5 font-[Sumana]">
+                <p class="font-thin text-xl text-[#666768]">GLOBAL</p>
+                <p class="text-[#0C2340] text-xl lg:text-3xl">
+                  Empowering through education
+                </p>
+                <p class="text-lg">
+                  A pathway out of poverty for children in India
+                </p>
+              </div>
+              <div class="">
+                <img
+                  src="images/arrow-right-s-line.svg"
+                  alt=""
+                  width="30"
+                  class=""
+                />
+              </div>
+            </div>
+          </div>
+
+          <div
+            class="grid md:grid-rows-3 hover:bg-[#E1E8F2] duration-300 hover:border-b-4 hover:border-[#C1CDDD]"
+          >
+            <div class="row-span-2">
+              <img src="images/2025-habitat-800.jpeg" alt="" />
+            </div>
+            <div class="flex items-center">
+              <div class="flex flex-col gap-5 p-5 font-[Sumana]">
+                <p class="font-thin text-xl text-[#666768]">COMMUNITY</p>
+                <p class="text-[#0C2340] text-xl lg:text-3xl">
+                  Habitat partnership bears fruit for homebuyers in South Bend
+                </p>
+              </div>
+              <div class="">
+                <img
+                  src="images/arrow-right-s-line.svg"
+                  alt=""
+                  width="50"
+                  class=""
+                />
+              </div>
+            </div>
+          </div>
+
+          <div
+            class="grid md:grid-rows-3 hover:bg-[#E1E8F2] duration-300 hover:border-b-4 hover:border-[#C1CDDD]"
+          >
+            <div class="row-span-2">
+              <img src="images/2024-reasons-to-serve-800.webp" alt="" />
+            </div>
+            <div class="flex items-center">
+              <div class="flex flex-col gap-5 p-5 font-[Sumana]">
+                <p class="font-thin text-xl text-[#666768]">GLOBAL</p>
+                <p class="text-[#0C2340] text-xl lg:text-3xl">
+                  Reason to serve
+                </p>
+                <p class="text-lg">
+                  History, West Point, and 9/11 memorial inspire ND ROTC
+                  students in New York
+                </p>
+              </div>
+              <div class="">
+                <img
+                  src="images/arrow-right-s-line.svg"
+                  alt=""
+                  width="30"
+                  class="object-fill"
+                />
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <div class="lg:grid lg:grid-cols-5">
+        <div class="lg:col-span-2 overflow-hidden w-full">
           <img src="images/dowd-students-800.jpeg" alt="" class="" />
         </div>
         <div
-          class="place-self-center md:h-[90%] md:col-start-1 md:row-start-1 md:col-span-3 grid gap-4 p-5 md:px-28 md:py-20 bg-[#0C2340] text-white"
+          class="place-self-center lg:h-[90%] md:col-start-1 md:row-start-1 md:col-span-3 grid gap-4 p-5 md:px-28 md:py-20 bg-[#0C2340] text-white"
         >
           <p class="text-xl md:text-3xl/12 font-[sumana]">
             “Notre Dame must be the leading global Catholic research university,
@@ -31,7 +172,7 @@
 
     <footer class="py-10">
       <section
-        class="flex flex-col md:flex-row items-center md:justify-center gap-4 p-10 text-white bg-[#0C2340]"
+        class="flex flex-col lg:flex-row items-center lg:justify-center gap-4 p-10 text-white bg-[#0C2340]"
       >
         <a href="#">Bookstore</a>
         <a href="#">Employment</a>
@@ -40,7 +181,7 @@
         <a href="#">Academic Calendar</a>
       </section>
 
-      <section class="grid md:grid-cols-4 p-5">
+      <section class="grid lg:grid-cols-4 p-5">
         <!-- <svg>
           <use
             xmlns:xlink="https://www.w3.org/1999/xlink"
@@ -89,7 +230,9 @@
           </a>
         </div>
 
-        <div class="text-[#555555] flex flex-col gap-0.5 items-center">
+        <div
+          class="md:place-self-center text-[#555555] flex flex-col gap-0.5 justify-center"
+        >
           <a href="#" class="font-bold">&copy; 2025 University of Notre Dame</a>
           <p>Notre Dame, IN 46556 USA</p>
           <p>Phone: <a href="#" class="underline">(574) 631-5000</a></p>
@@ -97,8 +240,12 @@
         </div>
       </section>
 
-      <div class="bg-[#D2D2D2] grid md:grid-cols-2 p-5 text-[#555555] md:px-20">
-        <div class="flex flex-col md:flex-row gap-5">
+      <div
+        class="bg-[#D2D2D2] grid md:grid-rows-2 lg:grid-rows-1 lg:grid-cols-2 p-5 text-[#555555] md:px-20"
+      >
+        <div
+          class="flex flex-col md:flex-row gap-5 self-center md:justify-self-center"
+        >
           <a
             href="#"
             class="px-4 py-2 hover:bg-[#F0F0F0] duration-300 rounded-xl"
@@ -130,7 +277,9 @@
           </a>
         </div>
 
-        <div class="flex flex-col md:grid md:grid-rows-2 md:grid-cols-3 gap-5">
+        <div
+          class="flex flex-col md:flex-row lg:justify-end gap-5 md:self-center md:justify-center md:flex-wrap lg:flex-nowrap"
+        >
           <a
             href="#"
             class="px-4 py-2 hover:bg-[#F0F0F0] duration-300 rounded-xl"
@@ -148,7 +297,7 @@
           </a>
           <a
             href="#"
-            class="px-4 py-2 hover:bg-[#F0F0F0] duration-300 rounded-xl md:col-start-2 md:col-span-2 md:text-end"
+            class="px-4 py-2 hover:bg-[#F0F0F0] duration-300 rounded-xl"
             >Notice of Non-Discrimination
           </a>
         </div>
