--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <main class="grid">
       <!-----------------------------------------------UNIVERSITY NEWS----------------------------------------------------------- -->
-      <section class="w-[90vw] place-self-center my-5 md:my-20">
+      <section class="w-[90vw] place-self-center my-5 md:my-20 text-[#0C2340]">
         <p class="mb-2 font-['Libre Franklin'] text-lg text-[#575757]">
           UNIVERSITY NEWS
         </p>
@@ -32,11 +32,41 @@
           /></a>
         </div>
 
-        <div class="font-[Sumana]">
-          <div><img src="images/globering_2025.jpeg" alt="" /></div>
-          <div>
-            <p>INTERNATIONAL</p>
-            <p>
+        <div class="grid md:grid-cols-4 lg:grid-cols-2 font-[Sumana]">
+          <div class="lg:z-10 lg:translate-y-[10%]">
+            <img src="images/globering_2025.jpeg" alt="" />
+          </div>
+
+          <div
+            class="p-5 lg:pr-0 md:col-span-3 lg:col-span-1 lg:pl-32 lg:bg-[#EDF2F9]"
+          >
+            <p class="text-[#575757] text-lg">INTERNATIONAL</p>
+            <p class="text-xl lg:text-3xl">
+              University of Notre Dame wins award for excellence in campus
+              internationalization
+            </p>
+
+            <div class="hidden lg:block">
+              <a
+                href="#"
+                class="flex hover:bg-[#E1E8F2] p-2 rounded-xl duration-300 place-self-end font-['Libre Franklin'] text-[#0C2340]"
+              >
+                <p class="md:text-lg self-center">View all stories</p>
+                <img
+                  src="images/arrow-right-s-line.svg"
+                  alt=""
+                  width="20"
+                  class="self-center"
+              /></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="grid md:grid-cols-4 lg:grid-cols-2 font-[Sumana]">
+          <div><img src="images/mc_mcob_banner.jpeg" alt="" /></div>
+          <div class="p-5 lg:pr-0 md:col-span-3">
+            <p class="text-[#575757] text-lg">LATEST NEWS</p>
+            <p class="text-xl lg:text-3xl">
               University of Notre Dame wins award for excellence in campus
               internationalization
             </p>
@@ -69,13 +99,13 @@
 
         <div class="grid lg:grid-cols-3 gap-10">
           <div
-            class="grid md:grid-rows-3 hover:bg-[#E1E8F2] duration-300 hover:border-b-4 hover:border-[#C1CDDD]"
+            class="grid md:grid-cols-4 lg:grid-cols-1 lg:grid-rows-3 hover:bg-[#E1E8F2] duration-300 hover:border-b-4 hover:border-[#C1CDDD]"
           >
-            <div class="row-span-2">
+            <div class="lg:row-span-2">
               <img src="images/2025-sampoorna-800.webp" alt="" />
             </div>
-            <div class="flex items-center">
-              <div class="flex flex-col gap-5 p-5 font-[Sumana]">
+            <div class="md:col-span-3 flex items-center">
+              <div class="flex flex-col lg:gap-5 p-5 font-[Sumana]">
                 <p class="font-thin text-xl text-[#666768]">GLOBAL</p>
                 <p class="text-[#0C2340] text-xl lg:text-3xl">
                   Empowering through education
@@ -84,7 +114,7 @@
                   A pathway out of poverty for children in India
                 </p>
               </div>
-              <div class="">
+              <div class="md:hidden lg:block">
                 <img
                   src="images/arrow-right-s-line.svg"
                   alt=""
@@ -96,19 +126,19 @@
           </div>
 
           <div
-            class="grid md:grid-rows-3 hover:bg-[#E1E8F2] duration-300 hover:border-b-4 hover:border-[#C1CDDD]"
+            class="grid md:grid-cols-4 lg:grid-cols-1 lg:grid-rows-3 hover:bg-[#E1E8F2] duration-300 hover:border-b-4 hover:border-[#C1CDDD]"
           >
-            <div class="row-span-2">
+            <div class="lg:row-span-2">
               <img src="images/2025-habitat-800.jpeg" alt="" />
             </div>
-            <div class="flex items-center">
-              <div class="flex flex-col gap-5 p-5 font-[Sumana]">
+            <div class="md:col-span-3 flex items-center">
+              <div class="flex flex-col lg:gap-5 p-5 font-[Sumana]">
                 <p class="font-thin text-xl text-[#666768]">COMMUNITY</p>
                 <p class="text-[#0C2340] text-xl lg:text-3xl">
                   Habitat partnership bears fruit for homebuyers in South Bend
                 </p>
               </div>
-              <div class="">
+              <div class="md:hidden lg:block">
                 <img
                   src="images/arrow-right-s-line.svg"
                   alt=""
@@ -120,13 +150,13 @@
           </div>
 
           <div
-            class="grid md:grid-rows-3 hover:bg-[#E1E8F2] duration-300 hover:border-b-4 hover:border-[#C1CDDD]"
+            class="grid md:grid-cols-4 lg:grid-cols-1 lg:grid-rows-3 hover:bg-[#E1E8F2] duration-300 hover:border-b-4 hover:border-[#C1CDDD]"
           >
-            <div class="row-span-2">
+            <div class="lg:row-span-2">
               <img src="images/2024-reasons-to-serve-800.webp" alt="" />
             </div>
-            <div class="flex items-center">
-              <div class="flex flex-col gap-5 p-5 font-[Sumana]">
+            <div class="md:col-span-3 flex items-center">
+              <div class="flex flex-col lg:gap-5 p-5 font-[Sumana]">
                 <p class="font-thin text-xl text-[#666768]">GLOBAL</p>
                 <p class="text-[#0C2340] text-xl lg:text-3xl">
                   Reason to serve
@@ -136,7 +166,7 @@
                   students in New York
                 </p>
               </div>
-              <div class="">
+              <div class="md:hidden lg:block">
                 <img
                   src="images/arrow-right-s-line.svg"
                   alt=""
