--- a/index.html
+++ b/index.html
@@ -8,12 +8,47 @@
   </head>
   <body>
     <main class="grid">
+      <section class="bg-[#0C2340] grid grid-rows-3 md:gap-10">
+        <div class="grid md:grid-cols-2">
+          <div>
+            <img
+              src="images/pillar-research-800.jpeg"
+              alt=""
+              class="lg:w-[60vw]"
+            />
+          </div>
+          <div class="text-white self-center grid gap-4 p-5 md:px-10 lg:px-20">
+            <p class="text-lg lg:text-2xl text-[#d2d2d2]">RESEARCH</p>
+            <p class="text-2xl lg:text-5xl font-[GPC]">
+              <strong> The Opportunity of Inquiry </strong>
+            </p>
+            <p class="text-lg">
+              For scholars who share a common passion for inquiry because of
+              what it can reveal about our world and ourselves, there is
+              opportunity here.
+            </p>
+
+            <a
+              href="#"
+              class="flex hover:bg-[#143865] p-2 lg:mx-10 rounded-xl duration-300 place-self-end font-['Libre Franklin'] text-white"
+            >
+              <p class="text-lg md:text-xl self-center mx-2">Research at ND</p>
+              <img
+                src="images/arrow-right-s-line.svg"
+                alt=""
+                width="20"
+                class="self-center"
+              />
+            </a>
+          </div>
+        </div>
+      </section>
+
       <!-----------------------------------------------UNIVERSITY NEWS----------------------------------------------------------- -->
       <section class="w-[90vw] place-self-center my-5 md:my-20 text-[#0C2340]">
         <p class="mb-2 font-['Libre Franklin'] text-lg text-[#575757]">
           UNIVERSITY NEWS
         </p>
-
         <div class="grid mb-2">
           <p class="text-[#0C2340] font-[GPC] text-3xl lg:text-5xl">
             <strong>Notre Dame At Work</strong>
@@ -32,44 +67,72 @@
           /></a>
         </div>
 
-        <div class="grid md:grid-cols-4 lg:grid-cols-2 font-[Sumana]">
-          <div class="lg:z-10 lg:translate-y-[10%]">
-            <img src="images/globering_2025.jpeg" alt="" />
+        <div class="grid grid-rows-4 gap-5 lg:grid-rows-5 lg:grid-cols-3">
+          <div
+            class="lg:col-span-full lg:row-span-3 grid md:grid-cols-4 lg:grid-cols-2 font-[Sumana]"
+          >
+            <div class="lg:z-10 lg:translate-y-[10%]">
+              <img src="images/globering_2025.jpeg" alt="" />
+            </div>
+
+            <div
+              class="p-5 lg:pr-0 md:col-span-3 lg:col-span-1 lg:bg-[#EDF2F9]"
+            >
+              <p class="text-[#575757] text-lg">INTERNATIONAL</p>
+              <p class="text-xl lg:text-3xl">
+                University of Notre Dame wins award for excellence in campus
+                internationalization
+              </p>
+
+              <div class="hidden lg:block">
+                <a
+                  href="#"
+                  class="flex hover:bg-[#E1E8F2] p-2 rounded-xl duration-300 place-self-end font-['Libre Franklin'] text-[#0C2340]"
+                >
+                  <p class="md:text-lg self-center">View all stories</p>
+                  <img
+                    src="images/arrow-right-s-line.svg"
+                    alt=""
+                    width="20"
+                    class="self-center"
+                /></a>
+              </div>
+            </div>
           </div>
 
           <div
-            class="p-5 lg:pr-0 md:col-span-3 lg:col-span-1 lg:pl-32 lg:bg-[#EDF2F9]"
+            class="lg:col-span-2 lg:row-span-2 grid md:grid-cols-4 lg:grid-cols-3 font-[Sumana] hover:bg-[#E1E8F2] duration-300 hover:border-b-4 hover:border-[#C1CDDD]"
           >
-            <p class="text-[#575757] text-lg">INTERNATIONAL</p>
-            <p class="text-xl lg:text-3xl">
-              University of Notre Dame wins award for excellence in campus
-              internationalization
-            </p>
-
-            <div class="hidden lg:block">
-              <a
-                href="#"
-                class="flex hover:bg-[#E1E8F2] p-2 rounded-xl duration-300 place-self-end font-['Libre Franklin'] text-[#0C2340]"
-              >
-                <p class="md:text-lg self-center">View all stories</p>
-                <img
-                  src="images/arrow-right-s-line.svg"
-                  alt=""
-                  width="20"
-                  class="self-center"
-              /></a>
+            <div><img src="images/mc_mcob_banner.jpeg" alt="" /></div>
+            <div class="p-5 md:col-span-3 lg:col-span-2 lg:pr-20">
+              <p class="text-[#575757] text-lg">LATEST NEWS</p>
+              <p class="text-xl">
+                University of Notre Dame wins award for excellence in campus
+                internationalization
+              </p>
             </div>
           </div>
-        </div>
+          <div
+            class="lg:col-start-1 lg:row-start-4 font-[Sumana] hover:bg-[#E1E8F2] duration-300 hover:border-b-4 hover:border-[#C1CDDD]"
+          >
+            <div class="p-5">
+              <p class="text-[#575757] text-lg">COMMUNITY NEWS</p>
+              <p class="text-xl">
+                Notre Dame with community organizations for Walk the Walk Week
+                service project
+              </p>
+            </div>
+          </div>
 
-        <div class="grid md:grid-cols-4 lg:grid-cols-2 font-[Sumana]">
-          <div><img src="images/mc_mcob_banner.jpeg" alt="" /></div>
-          <div class="p-5 lg:pr-0 md:col-span-3">
-            <p class="text-[#575757] text-lg">LATEST NEWS</p>
-            <p class="text-xl lg:text-3xl">
-              University of Notre Dame wins award for excellence in campus
-              internationalization
-            </p>
+          <div
+            class="lg:col-start-1 lg:row-start-5 font-[Sumana] hover:bg-[#E1E8F2] duration-300 hover:border-b-4 hover:border-[#C1CDDD]"
+          >
+            <div class="p-5">
+              <p class="text-[#575757] text-lg">FACULTY AND STAFF</p>
+              <p class="text-xl">
+                Physicist Laura Fields granted a Presidential Early Career Award
+              </p>
+            </div>
           </div>
         </div>
       </section>
