--- a/index.html
+++ b/index.html
@@ -18,31 +18,48 @@
     <header></header>
     <main class="grid">
       <section
-        class="w-[100vw] h-[100vh] bg-[url('images/campus_spring_scenic-1200.webp')] bg-cover"
+        class="lg:w-[100vw] lg:h-[100vh] bg-[url('images/campus_spring_scenic-1200.webp')] bg-cover"
       >
         <div
-          class="w-[100vw] h-[100vh] grid md:grid-cols-2 lg:grid-cols-3 md:p-10 lg:p-20 bg-[#0C2340] opacity-90 text-white text-center md:text-right"
+          class="grid lg:w-[100vw] lg:h-[100vh] lg:p-20 bg-[#0C2340] opacity-90"
         >
-          <div class="lg:col-start-3 font-[GPC]">
-            <div class="lg:text-8xl font-bold">
-              <p>WHAT WOULD</p>
-              <div>
-                <img
-                  src="images/monogram-32.png"
-                  alt=""
-                  width="30"
-                  class="place-self-end"
-                />
+          <div
+            class="md:w-1/2 lg:w-1/4 place-self-end text-white text-center md:text-right"
+          >
+            <div class="p-10 md:m-0 md:col-start-2 lg:col-start-3 font-[GPC]">
+              <div class="md:text-5xl lg:text-8xl font-bold">
+                <p>WHAT WOULD</p>
+                <div>
+                  <img
+                    src="images/monogram-32.png"
+                    alt=""
+                    width="30"
+                    class="place-self-end"
+                  />
+                </div>
+                <p>YOU FIGHT FOR?</p>
               </div>
-              <p>YOU FIGHT FOR?</p>
-            </div>
-            <div>
-              <p>
-                Notre Dame attracts people willing to take action to find
-                solutions to humanity's most pressing challenges. "What would
-                you fight for?" For us, it's not a question. It's a call to
-                action. We are the Fighting Irish
-              </p>
+
+              <div>
+                <p class="text-lg md:text-xl lg:text-2xl">
+                  Notre Dame attracts people willing to take action to find
+                  solutions to humanity's most pressing challenges. "What would
+                  you fight for?" For us, it's not a question. It's a call to
+                  action. We are the Fighting Irish
+                </p>
+              </div>
+
+              <a
+                href="#"
+                class="flex bg-[#E1E8F2] p-2 rounded-xl duration-300 md:place-self-end font-['Libre Franklin'] text-[#0C2340]"
+              >
+                <p class="md:text-lg self-center">What would you fight for?</p>
+                <img
+                  src="images/external-link-gold.svg"
+                  alt=""
+                  width="20"
+                  class="self-center"
+              /></a>
             </div>
           </div>
         </div>
